--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 		/>
 	</head>
 	<body>
+		<footer>
+			This project was coded by
+			<a
+				href="https://github.com/ksmith92272"
+				target="_blank"
+				>Kimberly Smith</a
+			>
+			and is
+			<a
+				href="https://github.com/ksmith92272/ai-generator"
+				target="_blank"
+				>open-sourced on GitHub.</a
+			>
+		</footer>
 		<script src="src/index.js"></script>
 	</body>
 </html>
