Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 		/>
 	</head>
 	<body>
+		<header>
+			<h1>Spanish Poem Generator</h1>
+			<form action="submit">
+				<input
+					type="text"
+					placeholder="Enter a topic for the poem"
+					autofocus
+					autocomplete="off"
+					required
+				/>
+				<input type="submit" />
+			</form>
+			<div id="poem">
+				Todos callados,<br />bajo la luna;<br />el bosque, el lago, <br />el
+				cerro, el monte,<br />
+				bajo la luna, <br />todos callados.
+			</div>
+		</header>
+		<main></main>
 		<footer>
 			This project was coded by
 			<a
