Added API integration

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			href="src/style.css"
 		/>
 		<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+		<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -51,6 +52,7 @@
 						autocomplete="off"
 						required
 						class="text-field"
+						id="text-field"
 					/>
 					<input
 						type="submit"
@@ -59,9 +61,27 @@
 					/>
 				</form>
 			</header>
-
-			<main id="main"></main>
-
+			<main id="main">
+				<div
+					id="poem"
+					class="poem"
+				>
+					Todos callados,
+					<br />
+					bajo la luna;
+					<br />
+					el bosque, el lago, <br />
+					el cerro, el monte,
+					<br />
+					bajo la luna, <br />
+					todos callados.
+					<span
+						id="signature"
+						class="signature"
+						>SheCodes AI</span
+					>
+				</div>
+			</main>
 			<footer>
 				This project was coded by
 				<a
